Fixed a bug with image streching on IOS

--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -64,6 +64,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   max-width: 100%;
   background-color: #000000;
 }
@@ -71,22 +72,21 @@
 .details-img-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
+  align-items: flex-start;
   min-width: 200px;
   max-width: 100%;
   height: 300px;
   margin: 1rem;
   border-radius: 4%;
-  box-shadow: 0 0 5px white;
 }
 
 .img {
+  display: flex;
+  align-items: flex-start;
+  object-fit: contain;
   width: 100%;
-  height: 100%;
+  height: 300px;
   border-radius: 4%;
-  border: 3px solid white;
 }
 .details-actions {
   display: flex;
